Fix spacing with padding

--- a/css/main.css
+++ b/css/main.css
@@ -88,8 +88,12 @@ dl dt i {
   padding: 1rem 0;
 }
 
-.spacing {
-  padding: 1rem 0;
+.spacing-1 {
+  padding-top: 1rem;
+}
+
+.spacing-2 {
+  padding-bottom: 1rem;
 }
 
 b {
